# anki-add-ons

./: .gitignore  DEVELOPMENT.md  ENV_SETUP.md  LICENSE.md  README.md  pyproject.toml  runanki.py
.github/workflows/: build-addons.yml
ai_flashcards/: __init__.py
scripts/: build_all.py  install_dev.py
